# ALOHA_CREWAI

./: README.md  requirements.txt
aloha_crew_1/: README.md  pyproject.toml
aloha_crew_1/src/aloha_crew_1/: crew.py  main.py
