[project]
name = "aloha_crew_1"
version = "0.1.0"
description = "ALOHA_CREW_1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
aloha_crew_1 = "aloha_crew_1.main:run"
run_crew = "aloha_crew_1.main:run"
train = "aloha_crew_1.main:train"
replay = "aloha_crew_1.main:replay"
test = "aloha_crew_1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
